// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip/presenters/ContentPresenter renders with children 1`] = `
.emotion-0 {
  min-height: 32px;
  padding: 8px 12px;
  box-sizing: border-box;
}

<div
  className="emotion-0"
>
  <span>
    Hello
  </span>
</div>
`;

exports[`tooltip/presenters/ContentPresenter renders without props 1`] = `
.emotion-0 {
  min-height: 32px;
  padding: 8px 12px;
  box-sizing: border-box;
}

<div
  className="emotion-0"
/>
`;
